@@ -16,72 +16,71 @@
  */
 package com.acme.verein.rest;
 
-import com.acme.verein.service.ConstraintViolationsException;
-import com.acme.verein.service.EmailExistsException;
-import com.acme.verein.service.NotFoundException;
-import com.acme.verein.service.VereinWriteService;
+
+import com.acme.verein.service.*;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ProblemDetail;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.converter.HttpMessageNotReadableException;
-import org.springframework.web.bind.annotation.ExceptionHandler;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.ResponseStatus;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.web.bind.annotation.*;
+
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
+
 import static com.acme.verein.rest.VereinGetController.ID_PATTERN;
-import static org.springframework.http.HttpStatus.BAD_REQUEST;
-import static org.springframework.http.HttpStatus.NOT_FOUND;
-import static org.springframework.http.HttpStatus.NO_CONTENT;
-import static org.springframework.http.HttpStatus.UNPROCESSABLE_ENTITY;
+import static com.acme.verein.rest.VereinGetController.REST_PATH;
+import static org.springframework.http.HttpStatus.*;
 import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
-import static org.springframework.http.ResponseEntity.created;
+import static org.springframework.http.ResponseEntity.*;
 
 /**
- * Eine `@RestController`-Klasse bildet die REST-Schnittstelle, wobei die HTTP-Methoden, Pfade und MIME-Typen auf die
- * Funktionen der Klasse abgebildet werden.
- * ![Klassendiagramm](../../../images/KundeWriteController.svg)
+ * Eine @RestController-Klasse bildet die REST-Schnittstelle, wobei die HTTP-Methoden, Pfade und MIME-Typen auf die
+ * Methoden der Klasse abgebildet werden.
+ * <img src="../../../../../asciidoc/VereinWriteController.svg" alt="Klassendiagramm">
  *
  * @author <a href="mailto:Juergen.Zimmermann@h-ka.de">Jürgen Zimmermann</a>
  */
 @RestController
-@RequestMapping("/rest")
-@Tag(name = "Verein API")
+@RequestMapping(REST_PATH)
 @RequiredArgsConstructor
 @Slf4j
-@SuppressWarnings("ClassFanOutComplexity")
-final class VereinWriteController {
+@SuppressWarnings({"ClassFanOutComplexity", "MethodCount", "DuplicatedCode"})
+public class VereinWriteController {
+    /**
+     * Basispfad für "type" innerhalb von ProblemDetail.
+     */
     @SuppressWarnings("TrailingComment")
-    private static final String PROBLEM_PATH = "/problem/"; //NOSONAR
-    private final VereinWriteService service;
-    private final UriHelper uriHelper;
+    public static final String PROBLEM_PATH = "/problem/"; //NOSONAR
 
+    private static final String VERSIONSNUMMER_FEHLT = "Versionsnummer fehlt";
+
+    private final VereinWriteService service;
+    private final VereinReadService readService;
+
+    private final UriHelper uriHelper;
 
     /**
      * Einen neuen Verein-Datensatz anlegen.
      *
-     * @param vereinDTO Das Vereinobjekt aus dem eingegangenen Request-Body.
-     * @param request   wartet auf ServletRequest.
-     * @return URI dem eingegangenen Request-Body.
+     * @param request Das Request-Objekt, um Location im Response-Header zu erstellen.
+     * @return Response mit Statuscode 201 einschließlich Location-Header oder Statuscode 422 falls Constraints verletzt
+     *      sind oder die Emailadresse bereits existiert oder Statuscode 400 falls syntaktische Fehler im Request-Body
+     *      vorliegen.
+     * @throws URISyntaxException falls die URI im Request-Objekt nicht korrekt wäre
      */
     @PostMapping(consumes = APPLICATION_JSON_VALUE)
-    @ResponseStatus(NO_CONTENT)
-    @Operation(summary = "Ein neues Verein anlegen", tags = "Neuanlegen")
+    @Operation(summary = "Einen neuen Vereine anlegen", tags = "Neuanlegen")
     @ApiResponse(responseCode = "201", description = "Verein neu angelegt")
     @ApiResponse(responseCode = "400", description = "Syntaktische Fehler im Request-Body")
-    @ApiResponse(responseCode = "422", description = "Ungültige Werte")
+    @ApiResponse(responseCode = "422", description = "Ungültige Werte oder Email vorhanden")
     @SuppressWarnings("TrailingComment")
     ResponseEntity<Void> create(
         @RequestBody final VereinDTO vereinDTO,
@@ -98,36 +97,142 @@ final class VereinWriteController {
     /**
      * Einen vorhandenen Verein-Datensatz überschreiben.
      *
-     * @param id        ID des zu aktualisierenden Vereins.
-     * @param vereinDTO Das Kundenobjekt aus dem eingegangenen Request-Body.
+     * @param id ID des zu aktualisierenden Vereine.
+     * @param vereinDTO Das Vereinnobjekt aus dem eingegangenen Request-Body.
+     * @param version Versionsnummer aus dem Header If-Match
+     * @param request Das Request-Objekt, um ggf. die URL für ProblemDetail zu ermitteln
+     * @return Response mit Statuscode 204 oder Statuscode 400, falls der JSON-Datensatz syntaktisch nicht korrekt ist
+     *      oder 422 falls Constraints verletzt sind oder die Emailadresse bereits existiert
+     *      oder 412 falls die Versionsnummer nicht ok ist oder 428 falls die Versionsnummer fehlt.
      */
     @PutMapping(path = "{id:" + ID_PATTERN + "}", consumes = APPLICATION_JSON_VALUE)
-    @ResponseStatus(NO_CONTENT)
-    @Operation(summary = "Ein Verein mit neuen Werten aktualisieren", tags = "Aktualisieren")
+    @Operation(summary = "Einen Vereine mit neuen Werten aktualisieren", tags = "Aktualisieren")
     @ApiResponse(responseCode = "204", description = "Aktualisiert")
     @ApiResponse(responseCode = "400", description = "Syntaktische Fehler im Request-Body")
     @ApiResponse(responseCode = "404", description = "Verein nicht vorhanden")
-    @ApiResponse(responseCode = "422", description = "Ungültige Werte")
-    void update(@PathVariable final UUID id, @RequestBody final VereinDTO vereinDTO
+    @ApiResponse(responseCode = "412", description = "Versionsnummer falsch")
+    @ApiResponse(responseCode = "422", description = "Ungültige Werte oder Email vorhanden")
+    @ApiResponse(responseCode = "428", description = VERSIONSNUMMER_FEHLT)
+    ResponseEntity<Void> update(
+        @PathVariable final UUID id,
+        @RequestBody final VereinDTO vereinDTO,
+        @RequestHeader("If-Match") final Optional<String> version,
+        final HttpServletRequest request
     ) {
         log.debug("update: id={}, {}", id, vereinDTO);
-        service.update(vereinDTO.toVerein(), id);
+        final int versionInt = getVersion(version, request);
+        final var verein = service.update(vereinDTO.toVerein(), id, versionInt);
+        log.debug("update: {}", verein);
+        return noContent().eTag("\"" + verein.getVersion() + '"').build();
     }
 
+    @SuppressWarnings({"MagicNumber", "RedundantSuppression"})
+    private int getVersion(final Optional<String> versionOpt, final HttpServletRequest request) {
+        log.trace("getVersion: {}", versionOpt);
+        if (versionOpt.isEmpty()) {
+            throw new VersionInvalidException(
+                PRECONDITION_REQUIRED,
+                VERSIONSNUMMER_FEHLT,
+                URI.create(request.getRequestURL().toString()));
+        }
+
+        final var versionStr = versionOpt.get();
+        if (versionStr.length() < 3 ||
+            versionStr.charAt(0) != '"' ||
+            versionStr.charAt(versionStr.length() - 1) != '"') {
+            throw new VersionInvalidException(
+                PRECONDITION_FAILED,
+                "Ungueltiges ETag " + versionStr,
+                URI.create(request.getRequestURL().toString())
+            );
+        }
+
+        final int version;
+        try {
+            version = Integer.parseInt(versionStr.substring(1, versionStr.length() - 1));
+        } catch (final NumberFormatException ex) {
+            throw new VersionInvalidException(
+                PRECONDITION_FAILED,
+                "Ungueltiges ETag " + versionStr,
+                URI.create(request.getRequestURL().toString()),
+                ex
+            );
+        }
+
+        log.trace("getVersion: version={}", version);
+        return version;
+    }
+
+    /**
+     * Einen vorhandenen Verein-Datensatz durch PATCH aktualisieren.
+     *
+     * @param id ID des zu aktualisierenden Vereine.
+     * @param version Versionsnummer aus dem Header If-Match
+     * @param authentication Authentication-Objekt für Security
+     * @param request Das Request-Objekt, um ggf. die URL für ProblemDetail zu ermitteln
+     * @return Response mit Statuscode 204 oder Statuscode 400, falls der JSON-Datensatz syntaktisch nicht korrekt ist
+     *      oder 422 falls Constraints verletzt sind oder die Emailadresse bereits existiert
+     *      oder 412 falls die Versionsnummer nicht ok ist oder 428 falls die Versionsnummer fehlt.
+     */
+    @PatchMapping(path = "{id:" + ID_PATTERN + "}", consumes = APPLICATION_JSON_VALUE)
+    @Operation(summary = "Einen Vereine mit einzelnen neuen Werten aktualisieren", tags = "Aktualisieren")
+    @ApiResponse(responseCode = "204", description = "Aktualisiert")
+    @ApiResponse(responseCode = "400", description = "Syntaktische Fehler im Request-Body")
+    @ApiResponse(responseCode = "404", description = "Verein nicht vorhanden")
+    @ApiResponse(responseCode = "412", description = "Versionsnummer falsch")
+    @ApiResponse(responseCode = "422", description = "Ungültige Werte oder Email vorhanden")
+    @ApiResponse(responseCode = "428", description = VERSIONSNUMMER_FEHLT)
+    ResponseEntity<Void> patch(
+        @PathVariable final UUID id,
+        @RequestHeader("If-Match") final Optional<String> version,
+        final Authentication authentication,
+        final HttpServletRequest request
+    ) {
+        final var user = (UserDetails) authentication.getPrincipal();
+        log.debug("version={}, operations={}, user={}", id, version, user);
+        //noinspection DuplicatedCode
+        if (user == null) {
+            return status(FORBIDDEN).build();
+        }
+
+        final int versionInt = getVersion(version, request);
+
+        final var verein = readService.findById(id);
+        log.debug("patch: {}", verein);
+
+        final var vereinDb = service.update(verein, id, versionInt);
+        log.debug("patch: {}", vereinDb);
+        return noContent().eTag("\"" + vereinDb.getVersion() + '"').build();
+    }
+
+    /**
+     * Einen vorhandenen Vereine anhand seiner ID löschen.
+     *
+     * @param id ID des zu löschenden Vereine.
+     */
+    @DeleteMapping(path = "{id:" + ID_PATTERN + "}")
+    @ResponseStatus(NO_CONTENT)
+    @Operation(summary = "Einen Vereine anhand der ID loeschen", tags = "Loeschen")
+    @ApiResponse(responseCode = "204", description = "Gelöscht")
+    void deleteById(@PathVariable final UUID id)  {
+        log.debug("deleteById: id={}", id);
+        service.deleteById(id);
+    }
 
     @ExceptionHandler
-    @SuppressWarnings("unused")
-    ProblemDetail handleConstraintViolations(final ConstraintViolationsException ex, final HttpServletRequest request
+    ProblemDetail onConstraintViolations(
+        final ConstraintViolationsException ex,
+        final HttpServletRequest request
     ) {
-        log.debug("handleConstraintViolations: {}", ex.getMessage());
+        log.debug("onConstraintViolations: {}", ex.getMessage());
 
         final var vereinViolations = ex.getViolations()
             .stream()
             .map(violation -> violation.getPropertyPath() + ": " +
                 violation.getConstraintDescriptor().getAnnotation().annotationType().getSimpleName() + " " +
                 violation.getMessage())
-            .collect(Collectors.toList());
-        log.trace("handleConstraintViolations: {}", vereinViolations);
+            .toList();
+        log.trace("onConstraintViolations: {}", vereinViolations);
         final String detail;
         if (vereinViolations.isEmpty()) {
             detail = "N/A";
@@ -139,41 +244,43 @@ final class VereinWriteController {
 
         final var problemDetail = ProblemDetail.forStatusAndDetail(UNPROCESSABLE_ENTITY, detail);
         problemDetail.setType(URI.create(PROBLEM_PATH + ProblemType.CONSTRAINTS.getValue()));
-        final var uri = uriHelper.getBaseUri(request);
-        problemDetail.setInstance(uri);
+        problemDetail.setInstance(URI.create(request.getRequestURL().toString()));
 
         return problemDetail;
     }
 
-
     @ExceptionHandler
-    @SuppressWarnings("unused")
-    ProblemDetail handleMessageNotReadable(final HttpMessageNotReadableException ex) {
-        log.debug("handleMessageNotReadable: {}", ex.getMessage());
-        final var problemDetail = ProblemDetail.forStatusAndDetail(BAD_REQUEST, ex.getMessage());
-        problemDetail.setType(URI.create(PROBLEM_PATH + ProblemType.BAD_REQUEST.getValue()));
-        return problemDetail;
-    }
-
-    @ExceptionHandler
-    @SuppressWarnings("unused")
-    ResponseEntity<ProblemDetail> onEmailExists(final EmailExistsException ex, final HttpServletRequest request) {
+    ProblemDetail onEmailExists(final EmailExistsException ex, final HttpServletRequest request) {
         log.debug("onEmailExists: {}", ex.getMessage());
         final var problemDetail = ProblemDetail.forStatusAndDetail(UNPROCESSABLE_ENTITY, ex.getMessage());
         problemDetail.setType(URI.create(PROBLEM_PATH + ProblemType.CONSTRAINTS.getValue()));
-        final var uri = uriHelper.getBaseUri(request);
-        problemDetail.setInstance(uri);
-        return ResponseEntity.of(problemDetail).build();
+        problemDetail.setInstance(URI.create(request.getRequestURL().toString()));
+        return problemDetail;
     }
 
-    /**
-     * ExceptionHandler für eine NotFoundException.
-     *
-     * @param ex Die Exception
-     */
+
+
     @ExceptionHandler
-    @ResponseStatus(NOT_FOUND)
-    void onNotFound(final NotFoundException ex) {
-        log.debug("onNotFound: {}", ex.getMessage());
+    ProblemDetail onVersionOutdated(
+        final VersionOutdatedException ex,
+        final HttpServletRequest request
+    ) {
+        log.debug("onVersionOutdated: {}", ex.getMessage());
+        final var problemDetail = ProblemDetail.forStatusAndDetail(PRECONDITION_FAILED, ex.getMessage());
+        problemDetail.setType(URI.create(PROBLEM_PATH + ProblemType.PRECONDITION.getValue()));
+        problemDetail.setInstance(URI.create(request.getRequestURL().toString()));
+        return problemDetail;
+    }
+
+    @ExceptionHandler
+    ProblemDetail onMessageNotReadable(
+        final HttpMessageNotReadableException ex,
+        final HttpServletRequest request
+    ) {
+        log.debug("onMessageNotReadable: {}", ex.getMessage());
+        final var problemDetail = ProblemDetail.forStatusAndDetail(BAD_REQUEST, ex.getMessage());
+        problemDetail.setType(URI.create(PROBLEM_PATH + ProblemType.BAD_REQUEST.getValue()));
+        problemDetail.setInstance(URI.create(request.getRequestURL().toString()));
+        return problemDetail;
     }
 }
